corrected some spacing issues

--- a/style.css
+++ b/style.css
@@ -2,17 +2,16 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-  * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
 body {
   font-family: 'Poppins', sans-serif;
 } 
 p{
-  display: block;
   color: rgb(85, 85, 85);
 }
 
@@ -148,17 +147,15 @@ a:hover {
 /* SECTIONS */
 
 section {
-  box-sizing: border-box;
-  min-height: fit-content;  
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
   border: solid #5B6DCD 10px;
+  max-width: 100%;
 }
-
 .section-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    margin: .5rem;
+    max-width: 100%;
     border: solid red 5px;
 }
 
@@ -182,55 +179,44 @@ section {
 
 #profile {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-wrap: nowrap;
 }
-.pic-container{
+.profile-pic-container{
+  overflow: hidden;
   border: black solid 5px;
-  height: auto;
-  width: auto;
-  max-width: 100%;
 }
 .profile-pic {
-  max-width: 100%; 
-  object-fit: cover;
-  border-radius: 200px;
-  padding: 1rem 0; 
+  width: 310px;
 }
 .profile-container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  border: 5px green solid;
+  border: 5px yellow solid;
 }
-
+.title-container{
+  margin: 1rem;
+}
 .socials-container {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
 }
-
-
-
  /* BUTTONS */
 
  .btn-container {
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   border: green solid 5px;
  }
-
  button {
   font-weight: 600;
   transition: all 300ms ease;
-  padding: .9rem;
-  width: 7rem;
+  padding: .7rem;
+  width: 8rem;
   border-radius: 2rem;
   border: rgb(163, 163, 163) 0.2rem solid;
  }
-
   button:hover {
   cursor: pointer;
   background: rgb(53,53,53);
@@ -244,8 +230,6 @@ section {
   flex-direction: column;
   flex-wrap: wrap;
 }
-
-
 .about-container {
   display: flex;
   align-items: center;
@@ -260,6 +244,9 @@ section {
 .about-section-container {
   display: flex;
   border: 5px solid orange;
+}
+.about-pic-container{
+  margin: 1rem 2rem;
 }
 .about-pic {
   border-radius: 2rem;
@@ -287,14 +274,11 @@ section {
   justify-content: center;
   align-items: center;
 }
-
-
 .project-img {
   border-radius: 2rem;
   width: 90%;
   height: 90%;
 }
-
 .project-title {
   margin: 1rem;
   color: black;
@@ -307,7 +291,6 @@ section {
   justify-content: center;
   flex-direction: column;
 }
-
 .contact-container {
   display: flex;
   align-items: center;
@@ -318,7 +301,6 @@ section {
   border-radius: 2rem;
   border: rgb(167, 167, 167) 0.1rem solid;
 }
-
 .contact-info-container {
   display: flex;
   align-items: center;
@@ -326,15 +308,12 @@ section {
   gap: 0.5rem;
   margin: .5rem;
 }
-
 .contact-info-container p {
   font-size: larger;
 }
-
 .contact-icon {
   cursor: default;
 }
-
 .email-icon {
   height: 2.5rem;
 
@@ -346,7 +325,6 @@ footer {
   height: 26vh;
   margin: 0 1rem;
 }
-
 footer p {
   text-align: center;
 }
